# embedded-bitmap-fonts

./: Cargo.toml  README.md  generate_all.sh
codegen/: Cargo.toml
codegen/src/: main.rs
fonts/bitmap/bitocra/: bitbuntu-full.bdf  bitbuntu.bdf  bitocra-13-full.bdf  bitocra-13.bdf  bitocra-full.bdf  bitocra.bdf
fonts/bitmap/spleen/: spleen-12x24.bdf  spleen-16x32.bdf  spleen-32x64.bdf  spleen-5x8.bdf  spleen-6x12.bdf  spleen-8x16.bdf
fonts/bitmap/tewi/: Tewi-bold-11.bdf  Tewi2a-bold-11.bdf  Tewi2a-normal-11.bdf
src/: artwiz.rs  bitocra.rs  cherry.rs  creep.rs  ctrld.rs  dina.rs  dylex.rs  envypn.rs  gohufont.rs  gomme.rs  haxor.rs  jmk.rs  kakwa.rs  knxt.rs  lib.rs  lokaltog.rs  mplus.rs  orp.rs  peep.rs  phallus.rs  progsole.rs  scientifica.rs  spleen.rs  tamzen.rs  terminus.rs  tewi.rs  trisk.rs  xbmicons.rs
