[package]
name = "embedded-bitmap-fonts"
version = "0.1.1"
authors = ["ecklf"]
edition = "2024"
rust-version = "1.85"
description = "A comprehensive collection of bitmap fonts no_std environments, with pixel-doubling support"
keywords = ["embedded", "graphics", "bitmap", "font", "no_std"]
categories = ["embedded", "graphics", "no-std"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ecklf/embedded-bitmap-fonts"
exclude = ["fonts/", "codegen/"]

[features]
default = ["terminus"]

# Font families - each can be enabled independently
artwiz = []
bitocra = []
cherry = []
creep = []
ctrld = []
dina = []
dylex = []
envypn = []
gohufont = []
gomme = []
haxor = []
jmk = []
kakwa = []
knxt = []
lokaltog = []
mplus = []
orp = []
peep = []
phallus = []
progsole = []
scientifica = []
spleen = []
tamzen = []
terminus = []
tewi = []
trisk = []
xbmicons = []

# Enable all fonts
all-fonts = [
    "artwiz",
    "bitocra",
    "cherry",
    "creep",
    "ctrld",
    "dina",
    "dylex",
    "envypn",
    "gohufont",
    "gomme",
    "haxor",
    "jmk",
    "kakwa",
    "knxt",
    "lokaltog",
    "mplus",
    "orp",
    "peep",
    "phallus",
    "progsole",
    "scientifica",
    "spleen",
    "tamzen",
    "terminus",
    "tewi",
    "trisk",
    "xbmicons",
]

[dependencies]
embedded-graphics = "0.8"

[workspace]
members = [".", "codegen"]
